--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "i18next": "^23.7.16",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
     "npm": "^10.2.5",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.11.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
