pages branch created

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage": "https://david-salem.github.io/david-salem",
+  "homepage": "https://david-salem.github.io/david-salem/",
   "name": "porfolio",
   "version": "0.1.0",
   "private": true,
